@@ -6,6 +6,8 @@ git-annex (6.20160419) UNRELEASED; urgency=medium
     fixed to not hang when it cannot find locale files.
   * reinject: When src file's content cannot be verified, leave it alone,
     instead of deleting it.
+  * calckey: New plumbing command, calculates the key that would be used
+    to refer to a file.
 
  -- Joey Hess <id@joeyh.name>  Tue, 19 Apr 2016 12:57:15 -0400
 
